--- a/package.json
+++ b/package.json
@@ -1,34 +1,58 @@
 {
-  "name": "raketero_pds_manager",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "raketero_pds_manager",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.3.2",
+		"@testing-library/user-event": "^7.1.2",
+		"apisauce": "^1.1.1",
+		"axios": "^0.19.2",
+		"bootstrap": "^4.5.0",
+		"env-cmd": "^10.1.0",
+		"formik": "^2.1.4",
+		"history": "^5.0.0",
+		"http-proxy-middleware": "^1.0.4",
+		"react": "^16.13.1",
+		"react-bootstrap": "^1.0.1",
+		"react-content-loader": "^5.0.4",
+		"react-dom": "^16.13.1",
+		"react-redux": "^7.2.0",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "3.4.1",
+		"react-toasts": "^3.0.6",
+		"react-webcam": "^5.2.0",
+		"redux": "^4.0.5",
+		"redux-devtools-extension": "^2.13.8",
+		"redux-thunk": "^2.3.0",
+		"svg-png-converter": "0.0.9",
+		"thunk": "0.0.1",
+		"yup": "^0.29.1"
+	},
+	"scripts": {
+		"start_dev": "env-cmd -f -e dev react-scripts start",
+		"build_dev": "env-cmd -f -e dev react-scripts build",
+		"start_uat": "env-cmd -f -e uat react-scripts start",
+		"build_uat": "env-cmd -f -e uat react-scripts build",
+		"start_prod": "env-cmd -f -e prod react-scripts start",
+		"build_prod": "env-cmd -f -e prod react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
