--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_TOKEN="d5bcb964-968e-8694-ad43-62c0fd90410f"
 REACT_APP_BASEURL="http://raketero-app.com/api_stage/api.php"
+NODE_PATH = src/
