added additional files

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -1,15 +1,18 @@
 {
 	"dev": {
+		"REACT_APP_ASSETS_PATH": "'https://raketero-app.com/staging/public/user-docs/default/no-image.jpg'",
 		"REACT_APP_NAME": "RAKETERO PROFILE APPROVAL CENTER",
 		"REACT_APP_ENVIRONMENT": "DEVELOPMENT",
 		"REACT_APP_RAKETERO_API_PATH": "https://raketero-app.com/api_stage/api.php"
 	},
 	"uat": {
+		"REACT_APP_ASSETS_PATH": "'https://raketero-app.com/staging/public/user-docs/default/no-image.jpg'",
 		"REACT_APP_NAME": "RAKETERO PROFILE APPROVAL CENTER",
 		"REACT_APP_ENVIRONMENT": "UAT",
 		"REACT_APP_RAKETERO_API_PATH": "https://raketero-app.com/api_stage/api.php"
 	},
 	"production": {
+		"REACT_APP_ASSETS_PATH": "'https://raketero-app.com/staging/public/user-docs/default/no-image.jpg'",
 		"REACT_APP_NAME": "RAKETERO PROFILE APPROVAL CENTER",
 		"REACT_APP_ENVIRONMENT": "PRODUCTION",
 		"REACT_APP_RAKETERO_API_PATH": "https://raketero-app.com/api_stage/api.php"
