--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
 		"file-saver": "^2.0.2",
 		"formik": "^2.1.4",
 		"history": "^5.0.0",
+		"html2canvas": "^1.0.0-rc.5",
 		"http-proxy-middleware": "^1.0.4",
+		"jspdf": "^1.5.3",
+		"multer": "^1.4.2",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.1",
 		"react-content-loader": "^5.0.4",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.0",
+		"react-redux-toastr": "^7.6.5",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1",
@@ -32,11 +36,11 @@
 		"yup": "^0.29.1"
 	},
 	"scripts": {
-		"start_dev": "env-cmd -f -e dev react-scripts start",
+		"start_dev": "env-cmd -f -e dev react-scripts start nodemon server.js",
 		"build_dev": "env-cmd -f -e dev react-scripts build",
-		"start_uat": "env-cmd -f -e uat react-scripts start",
+		"start_uat": "env-cmd -f -e uat react-scripts start nodemon server.js",
 		"build_uat": "env-cmd -f -e uat react-scripts build",
-		"start_prod": "env-cmd -f -e prod react-scripts start",
+		"start_prod": "env-cmd -f -e prod react-scripts start nodemon server.js",
 		"build_prod": "env-cmd -f -e prod react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
